--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,5 @@
 {
     "liveServer.settings.port": 5501,
-    "prettier.requireConfig": false
+    "prettier.requireConfig": false,
+    "editor.formatOnSave": true
 }
